fix // Fix mobile menu spacings for mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -31,6 +31,11 @@ body.modal--open {
   overflow-y: hidden;
 }
 
+body.no-scroll {
+  overflow: hidden !important;
+  overscroll-behavior: contain;
+}
+
 * {
   box-sizing: border-box;
 }
@@ -51,7 +56,7 @@ body.modal--open {
 
 /* Handle (the draggable part) */
 .horizontal-scroll::-webkit-scrollbar-thumb {
-  background: #FCA5A5;
+  background: #fca5a5;
   border-radius: 6px; /* Rounded corners of the scrollbar thumb */
 }
 
